--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio = "0.1.11"
 tokio-io = "0.1"
 rustls = { version = "0.15", optional = true }
 tokio-threadpool = "0.1.7"
+tracing-futures = { git = "https://github.com/tokio-rs/tracing", branch = "master", optional = true }
 # tls is enabled by default, we don't want that yet
 tungstenite = { default-features = false, version = "0.9", optional = true }
 urlencoding = "1.0.0"
@@ -38,6 +39,8 @@ urlencoding = "1.0.0"
 pretty_env_logger = "0.3"
 serde_derive = "1.0"
 handlebars = "1.0.0"
+tracing = "0.1.9"
+tracing-subscriber = "0.1.5"
 
 [features]
 default = ["multipart", "websocket"]
